# MCConsoleAPI

./: .gitignore  LICENSE  README.md  api_config.toml  config.json  config.py  config.toml  config_template.toml  database.py  main.py  pyproject.toml  requirements.txt  util.py
services/: player_analytics.py  player_fetch.py  process.py  server_analytics.py
src/MCConsoleAPI/: main.py
src/MCConsoleAPI/services/: player_analytics.py  player_fetch.py  process.py  server_analytics.py
src/MCConsoleAPI/utils/: database.py  logging.py  sse.py
util/: util.py
utils/: database.py  sse.py  util.py
